add nav bar, image, text

--- a/pagina/index.html
+++ b/pagina/index.html
@@ -7,17 +7,45 @@
 
 <script src="java/js.js"> </script>
 	<meta charset="UTF-8">
-		<title>Index</title>
+		<title>kk</title>
 
 		<link rel="stylesheet" href="#">
 	</head>
   <body>
 
 		<header class="header1">
-  <h1>K</h>
+			<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+	  <!-- Brand -->
+	  <a class="navbar-brand" href="#">Khloe</a>
+
+	  <!-- Toggler/collapsibe Button -->
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+
+	  <!-- Navbar links -->
+	  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+	    <ul class="navbar-nav">
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">exersice</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">menu</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">tips</a>
+	      </li>
+	    </ul>
+	  </div>
+	</nav>
 
 	</header>
+	<h1>Khloe</h>
+		<img class="img-fluid" "rounded" src="pic/shape.jpg" alt="khloe">
+
 	<article class="txt1">
+		<h2>GET YOUR RAVANGE BODY IN A MONTH</h2>
+		<p>follow me for work out tips, food suggestions and more! Let's work on getting our confidence back after a break up together. You will see results in a month if you follow my strict work out and diet</p>
 
 </article class="box">
 
