--- a/pagina/index.html
+++ b/pagina/index.html
@@ -14,7 +14,7 @@
   <body>
 
 		<header class="header1">
-			<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+			<nav class="navbar navbar-expand-md">
 	  <!-- Brand -->
 	  <a class="navbar-brand" href="#">Khloe</a>
 
@@ -40,8 +40,10 @@
 	</nav>
 
 	</header>
-	<h1>Khloe</h>
-		<img class="img-fluid" "rounded" src="pic/shape.jpg" alt="khloe">
+	<h1>Khloe</h1>
+	<div class="pic">
+		<img class="rounded" src="pic/shape.jpg" alt="khloe">
+	</div>
 
 	<article class="txt1">
 		<h2>GET YOUR RAVANGE BODY IN A MONTH</h2>
