add img fluid, changed paragraph

--- a/pagina/index.html
+++ b/pagina/index.html
@@ -42,12 +42,13 @@
 	</header>
 	<h1>Khloe</h1>
 	<div class="pic">
-		<img class="rounded" src="pic/shape.jpg" alt="khloe">
+		<img class="img-fluid" src="pic/shape.jpg" alt="khloe">
 	</div>
 
 	<article class="txt1">
 		<h2>GET YOUR RAVANGE BODY IN A MONTH</h2>
-		<p>follow me for work out tips, food suggestions and more! Let's work on getting our confidence back after a break up together. You will see results in a month if you follow my strict work out and diet</p>
+		<p>follow me for work out tips, food suggestions and more!</p>
+		<p>Let's work on getting our confidence back after a break up together. You will see results in a month if you follow my strict work out and diet</p>
 
 </article class="box">
 
