add an article and some css

--- a/pagina/index.html
+++ b/pagina/index.html
@@ -50,10 +50,72 @@
 		<p>follow me for work out tips, food suggestions and more!</p>
 		<p>Let's work on getting our confidence back after a break up together. You will see results in a month if you follow my strict work out and diet</p>
 
-</article class="box">
+</article>
 
 <article>
+	<h1>Recipe</h1>
+<div class="salmon">
+	<h2>Herb-Crusted Salmon and Grilled Asparagus Recipe</h2>
+	<img class="img-fluid" src="pic/salmon.jpg" alt="salmon">
+	<p>As well as being really tasty, this dish also looks great, so it’s a great meal to make if you are having a special dinner.</p>
 
+</div>
+<div class="ind">
+	<ul class="prep">
+		<li>Prep time: 15 mins
+		</li>
+		<li>Cook time: 20 mins
+		</li>
+		<li>Total time:  35 mins
+		</li>
+		<li>Serves: 2
+		</li>
+		<li>Dietary preferences:  Pescatarian
+		</li>
+	</ul>
+	<h4>Ingredients</h4>
+	<ul class="ing">
+		<li>2 x 200g salmon fillets, skin off
+		</li>
+		<li>2 slices wholemeal bread, crusts removed
+		</li>
+		<li>1 tbs finely grated parmesan cheese
+		</li>
+		<li>Freshly grated zest of half a lemon
+		</li>
+		<li>1 tbs parsley, chopped
+		</li>
+		<li>1 tbsp dill, chopped
+		</li>
+		<li>1 tbsp thyme, chopped
+		</li>
+		<li>1 egg white, beaten
+		</li>
+		<li>2 tbsp extra virgin olive oil
+		</li>
+		<li>1 bunch of asparagus
+		</li>
+		<li>1/4 cup walnuts, chopped
+		</li>
+</div>
+<div class="met">
+<h3>
+		Method:
+	</h3>
+<p>1. Preheat oven to 180C/350F fan-forced. Line a baking tray with baking paper.</p>
+
+<p>2. Place the bread into a food processor or kitchen chopper and pulse to form rough crumbs. Add the parmesan, lemon zest, all the herbs and egg white. Season with salt and pepper then pulse until just combined.</p>
+
+<p>3. Place the salmon on the baking tray, brush with 1 tbs oil and press the breadcrumb mixture on top. Bake for 10-15 minutes or until crust is golden and fish is cooked. </p>
+
+<p>4. Meanwhile, blanch the asparagus in salted boiling water for 1 minute then drain. In a frying pan heat remaining oil and toss in asparagus and walnuts, cooking for a further 2 minutes.</p>
+
+<p>5. Take salmon out of the oven and serve with asparagus.</p>
+
+</div>
+
+</article>
+<article>
 </article>
 
 
