--- a/pagina/index.html
+++ b/pagina/index.html
@@ -16,7 +16,7 @@
 		<header class="header1">
 			<nav class="navbar navbar-expand-md">
 	  <!-- Brand -->
-	  <a class="navbar-brand" href="#">Khloe</a>
+	  <a class="navbar-brand" href="#">Menu</a>
 
 	  <!-- Toggler/collapsibe Button -->
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -27,10 +27,10 @@
 	  <div class="collapse navbar-collapse" id="collapsibleNavbar">
 	    <ul class="navbar-nav">
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">exersice</a>
+	        <a class="nav-link" href="#">exercise</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">menu</a>
+	        <a class="nav-link" href="#">Healthy meals</a>
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link" href="#">tips</a>
