--- a/pagina/index.html
+++ b/pagina/index.html
@@ -56,7 +56,7 @@
 	<h1>Recipe</h1>
 <div class="salmon">
 	<h2>Herb-Crusted Salmon and Grilled Asparagus Recipe</h2>
-	<img class="img-fluid" src="pic/salmon.jpg" alt="salmon">
+	<img class="img-fluid sa" src="pic/salmon.jpg" alt="salmon">
 	<p>As well as being really tasty, this dish also looks great, so it’s a great meal to make if you are having a special dinner.</p>
 
 </div>
