fixed media query

--- a/pagina/index.html
+++ b/pagina/index.html
@@ -54,8 +54,9 @@
 
 <article>
 	<h1>Recipe</h1>
-<div class="salmon">
 	<h2>Herb-Crusted Salmon and Grilled Asparagus Recipe</h2>
+<div class="salmon">
+	
 	<img class="img-fluid sa" src="pic/salmon.jpg" alt="salmon">
 	<p>As well as being really tasty, this dish also looks great, so it’s a great meal to make if you are having a special dinner.</p>
 
@@ -97,7 +98,11 @@
 		</li>
 		<li>1/4 cup walnuts, chopped
 		</li>
+	</ul>
+		<img class="img-fluid la" src="pic/salad.png" alt="khloeeating">
 </div>
+
+
 <div class="met">
 <h3>
 		Method:
