--- a/pagina/index.html
+++ b/pagina/index.html
@@ -16,7 +16,7 @@
 		<header class="header1">
 			<nav class="navbar navbar-expand-md">
 	  <!-- Brand -->
-	  <a class="navbar-brand" href="#">Menu</a>
+	  <button onclick= "week()">Menu</button>
 
 	  <!-- Toggler/collapsibe Button -->
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -56,7 +56,7 @@
 	<h1>Recipe</h1>
 	<h2>Herb-Crusted Salmon and Grilled Asparagus Recipe</h2>
 <div class="salmon">
-	
+
 	<img class="img-fluid sa" src="pic/salmon.jpg" alt="salmon">
 	<p>As well as being really tasty, this dish also looks great, so it’s a great meal to make if you are having a special dinner.</p>
 
