--- a/pagina/index.html
+++ b/pagina/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="css/styles.css">
 
 <script src="java/js.js"> </script>
+<script src="java/function.js"> </script>
 	<meta charset="UTF-8">
 		<title>kk</title>
 
@@ -27,7 +28,7 @@
 	  <div class="collapse navbar-collapse" id="collapsibleNavbar">
 	    <ul class="navbar-nav">
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">exercise</a>
+	        <a class="nav-link" href="#"><button onclick = "promedio">exercise</button></a>
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link" href="#">Healthy meals</a>
