--- a/pagina/index.html
+++ b/pagina/index.html
@@ -5,8 +5,10 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link rel="stylesheet" href="css/styles.css">
 
-<script src="java/js.js"> </script>
+<script defer src="java/js.js"> </script>
 <script src="java/function.js"> </script>
+<script src="java/objetos.js"> </script>
+<script src="java/objetodos.js"> </script>
 	<meta charset="UTF-8">
 		<title>kk</title>
 
@@ -31,7 +33,7 @@
 	        <a class="nav-link" href="#"><button onclick = "promedio">exercise</button></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">Healthy meals</a>
+	        <a class="nav-link" href="#"><button onclick = "ver()">Healthy lifestyle</button></a>
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link" href="#">tips</a>
