--- a/pagina/index.html
+++ b/pagina/index.html
@@ -9,6 +9,7 @@
 <script src="java/function.js"> </script>
 <script src="java/objetos.js"> </script>
 <script src="java/objetodos.js"> </script>
+<script src="java/array.js"> </script>
 	<meta charset="UTF-8">
 		<title>kk</title>
 
@@ -36,7 +37,7 @@
 	        <a class="nav-link" href="#"><button onclick = "ver()">Healthy lifestyle</button></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">tips</a>
+	        <a class="nav-link" href="#"><button onclick = "tips()">tips</button></a>
 	      </li>
 	    </ul>
 	  </div>
