arregle yoga.js

--- a/pagina/index.html
+++ b/pagina/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link rel="stylesheet" href="css/styles.css">
 
-<script defer src="java/js.js"> </script>
+<script src="java/yoga.js"> </script>
 <script src="java/function.js"> </script>
 <script src="java/objetos.js"> </script>
 <script src="java/objetodos.js"> </script>
@@ -20,7 +20,7 @@
 		<header class="header1">
 			<nav class="navbar navbar-expand-md">
 	  <!-- Brand -->
-	  <button onclick= "week()">Menu</button>
+	  <button onclick=>Menu</button>
 
 	  <!-- Toggler/collapsibe Button -->
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -30,14 +30,17 @@
 	  <!-- Navbar links -->
 	  <div class="collapse navbar-collapse" id="collapsibleNavbar">
 	    <ul class="navbar-nav">
+				<li class="nav-item">
+				<a class="nav-link" href="#"><button onclick = "week()">Yoga</button></a>
+			</li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#"><button onclick = "promedio">exercise</button></a>
+	        <a class="nav-link" href="#"><button onclick = "promedio()">Exercise</button></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#"><button onclick = "ver()">Healthy lifestyle</button></a>
+	        <a class="nav-link" href="#"><button onclick = "ver()">Healthy Lifestyle</button></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#"><button onclick = "tips()">tips</button></a>
+	        <a class="nav-link" href="#"><button onclick = "tips()">Tips</button></a>
 	      </li>
 	    </ul>
 	  </div>
