--- a/pagina/index.html
+++ b/pagina/index.html
@@ -20,7 +20,7 @@
 		<header class="header1">
 			<nav class="navbar navbar-expand-md">
 	  <!-- Brand -->
-	  <button onclick=>Menu</button>
+	  <button onclick= "Cal()">Menu</button>
 
 	  <!-- Toggler/collapsibe Button -->
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
