--- a/pagina/index.html
+++ b/pagina/index.html
@@ -10,6 +10,7 @@
 <script src="java/objetos.js"> </script>
 <script src="java/objetodos.js"> </script>
 <script src="java/array.js"> </script>
+<script src="java/array2.js"> </script>
 	<meta charset="UTF-8">
 		<title>kk</title>
 
@@ -41,6 +42,9 @@
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link" href="#"><button onclick = "tips()">Tips</button></a>
+	      </li>
+				<li class="nav-item">
+	        <a class="nav-link" href="#"><button onclick = "med()">Meditation</button></a>
 	      </li>
 	    </ul>
 	  </div>
