add a transition with dom

--- a/pagina/index.html
+++ b/pagina/index.html
@@ -11,17 +11,18 @@
 <script src="java/objetodos.js"> </script>
 <script src="java/array.js"> </script>
 <script src="java/array2.js"> </script>
+<script src="java/dom.js"> </script>
 	<meta charset="UTF-8">
 		<title>kk</title>
 
 		<link rel="stylesheet" href="#">
 	</head>
-  <body>
+  <body class="fondo">
 
 		<header class="header1">
 			<nav class="navbar navbar-expand-md">
 	  <!-- Brand -->
-	  <button onclick= "Cal()">Menu</button>
+	  <button onclick= "transition()">Menu</button>
 
 	  <!-- Toggler/collapsibe Button -->
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
