--- a/pagina/index.html
+++ b/pagina/index.html
@@ -19,7 +19,7 @@
 	</head>
   <body class="fondo">
 
-		<header class="header1">
+		<header class="header1" id="col">
 			<nav class="navbar navbar-expand-md">
 	  <!-- Brand -->
 	  <button onclick= "transition()">Menu</button>
@@ -57,7 +57,7 @@
 		<img class="img-fluid" src="pic/shape.jpg" alt="khloe">
 	</div>
 
-	<article class="txt1">
+	<article class="txt1" id="col">
 		<h2>GET YOUR RAVANGE BODY IN A MONTH</h2>
 		<p>follow me for work out tips, food suggestions and more!</p>
 		<p>Let's work on getting our confidence back after a break up together. You will see results in a month if you follow my strict work out and diet</p>
@@ -67,14 +67,14 @@
 <article>
 	<h1>Recipe</h1>
 	<h2>Herb-Crusted Salmon and Grilled Asparagus Recipe</h2>
-<div class="salmon">
+<div class="salmon" id="col">
 
 	<img class="img-fluid sa" src="pic/salmon.jpg" alt="salmon">
 	<p>As well as being really tasty, this dish also looks great, so it’s a great meal to make if you are having a special dinner.</p>
 
 </div>
-<div class="ind">
-	<ul class="prep">
+<div class="ind" id="col">
+	<ul class="prep" id="col">
 		<li>Prep time: 15 mins
 		</li>
 		<li>Cook time: 20 mins
@@ -87,7 +87,7 @@
 		</li>
 	</ul>
 	<h4>Ingredients</h4>
-	<ul class="ing">
+	<ul class="ing" id="col">
 		<li>2 x 200g salmon fillets, skin off
 		</li>
 		<li>2 slices wholemeal bread, crusts removed
@@ -115,7 +115,7 @@
 </div>
 
 
-<div class="met">
+<div class="met" id="col">
 <h3>
 		Method:
 	</h3>
