--- a/pagina/index.html
+++ b/pagina/index.html
@@ -14,6 +14,7 @@
 <script src="java/dom.js"> </script>
 <script src="java/eventos.js"> </script>
 <script src="java/Storage.js"> </script>
+<script src="java/json.js"> </script>
 	<meta charset="UTF-8">
 		<title>kk</title>
 
