--- a/pagina/confirm.html
+++ b/pagina/confirm.html
@@ -14,13 +14,13 @@
      <body onload="confirm()">
          <h4>Please confirm your info:</h4>
          <label for="nombre">Name</label>
-         <p id="nombre">{name}</p>
+         <p id="clave"></p>
          <label for="telephone">Phone</label>
-         <p  id="phone">{phone}</p>
+         <p  id="clave"></p>
          <label for="email">Email</label>
-         <p id="email">{Email}</p>
+         <p id="clave"></p>
          <label for="password">Password</label>
-         <p id="password">{Password}</p>
+         <p id="clave"></p>
          <button class="right btn-large btn-floating green darken-2 waves-effect waves-light" onclick="confirmed()"><i class="material-icons">check</i></button>
          <button class="right btn-large btn-floating red waves-effect waves-light" onclick="navegar('index.html')"><i class="material-icons"><</i></button>
      </body>
