--- a/pagina/index.html
+++ b/pagina/index.html
@@ -4,21 +4,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;400;700;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link rel="stylesheet" href="css/styles.css">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 
-<script src="java/yoga.js"> </script>
-<script src="java/function.js"> </script>
-<script src="java/objetos.js"> </script>
-<script src="java/objetodos.js"> </script>
-<script src="java/array.js"> </script>
-<script src="java/array2.js"> </script>
-<script src="java/dom.js"> </script>
-<script src="java/eventos.js"> </script>
-<script src="java/Storage.js"> </script>
-<script src="java/json.js"> </script>
+<script defer src="java/yoga.js"> </script>
+<script defer src="java/function.js"> </script>
+<script defer src="java/objetos.js"> </script>
+<script defer src="java/objetodos.js"> </script>
+<script defer src="java/array.js"> </script>
+<script defer src="java/array2.js"> </script>
+<script defer src="java/dom.js"> </script>
+<script defer src="java/eventos.js"> </script>
+<script defer src="java/Storage.js"> </script>
+<script defer src="java/json.js"> </script>
+<script defer src="java/geolocations.js"> </script>
 	<meta charset="UTF-8">
 		<title>kk</title>
 
-		<link rel="stylesheet" href="#">
 	</head>
   <body class="fondo">
 
@@ -50,11 +52,20 @@
 				<li class="nav-item">
 	        <a class="nav-link" href="#"><button onclick = "med()">Meditation</button></a>
 	      </li>
+				<li class="nav-item">
+	        <a class="nav-link" href="#"><button onclick = "localizame()">Localizame</button></a>
+	      </li>
 	    </ul>
 	  </div>
 	</nav>
 
 	</header>
+	<br>
+	<br>
+	<p id="latlong"></p>
+	<div id="mapContainer" style="width: 480px, height: 400px"><div>
+	<br>
+	<br>
 	<h1>Khloe</h1>
 	<div class="pic">
 		<img class="img-fluid" id="imagen" src="pic/shape.jpg" alt="khloe">
