--- a/pagina/index.html
+++ b/pagina/index.html
@@ -38,7 +38,7 @@
 	  <div class="collapse navbar-collapse" id="collapsibleNavbar">
 	    <ul class="navbar-nav">
 				<li class="nav-item">
-				<a class="nav-link" href="#"><button onclick = "week()">Yoga</button></a>
+				<a class="nav-link" href="#"><button onclick = "week()">Week</button></a>
 			</li>
 	      <li class="nav-item">
 	        <a class="nav-link" href="#"><button onclick = "promedio()">Exercise</button></a>
