--- a/pagina/index.html
+++ b/pagina/index.html
@@ -8,16 +8,16 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script defer src="java/yoga.js"> </script>
-<script defer src="java/function.js"> </script>
 <script defer src="java/objetos.js"> </script>
 <script defer src="java/objetodos.js"> </script>
 <script defer src="java/array.js"> </script>
 <script defer src="java/array2.js"> </script>
 <script defer src="java/dom.js"> </script>
-<script defer src="java/eventos.js"> </script>
 <script defer src="java/Storage.js"> </script>
-<script defer src="java/json.js"> </script>
+<script defer src="java/eventos.js"> </script>
+<!---<script defer src="java/json.js"> </script>/-->
 <script defer src="java/geolocations.js"> </script>
+<script defer src="java/jquery.js"> </script>
 	<meta charset="UTF-8">
 		<title>kk</title>
 
@@ -78,31 +78,36 @@
 </article>
 
 <button onclick= "transition()">Change outlines</button>
-
+<br>
 <h4>Subscribe Here</h4>
+<button id="hide">hide</button><button id="show">show</button>
+<div id="see">
+
   <p>Please fill in the following filds;</p>
 	<ul>
 		<li>
       <label for="nombre">Name</label>
-        <input type="text" id="nombre" placeholder="Add name" onblur="save(this)">
+        <input type="text" id="clave" placeholder="Add name" onblur="save(this)">
 					</li>
 				<li>
       <label for="Telephone">Telephone</label>
-        <input type="tel" id="phone" placeholder="Add phone" onblur="save(this)">
+        <input type="tel" id="clave" placeholder="Add phone" onblur="save(this)">
 			</li>
 		<li>
       <label for="email">Email</label>
-        <input type="email" id="email" placeholder="Add email" onblur="save(this)">
+        <input type="email" id="clave" placeholder="Add email" onblur="save(this)">
 			</li>
 			<li>
       <label for="password">Password</label>
-        <input type="password" id="password" placeholder="you will get your passcode as sms" onblur="save(this)">
+        <input type="password" id="clave" placeholder="you will get your passcode as sms" onblur="save(this)">
 			</li>
 			<li>
       <button class="right btn-large btn-floating blue waves-effect waves-light" onclick= "navegar('confirm.html')"><i class="material-icons">></i></button>
 		</li>
-
+</div>
 <article>
+	<div>
+	</div>
 	<h1>Recipe</h1>
 	<h2>Herb-Crusted Salmon and Grilled Asparagus Recipe</h2>
 <div class="salmon" id="col">
