--- a/pagina/index.html
+++ b/pagina/index.html
@@ -25,38 +25,18 @@
   <body class="fondo">
 
 		<header class="header1" id="col">
-			<nav class="navbar navbar-expand-md">
-	  <!-- Brand -->
-	  <button onclick= "transition()">Menu</button>
 
-	  <!-- Toggler/collapsibe Button -->
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
+			<nav role="navigation" class="primary-navigation navbar navbar-expand-md">
+		  <ul>
+		    <li><a href="#">week</a></li>
+		    <li><a href="#">Exercise</a></li>
 
-	  <!-- Navbar links -->
-	  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-	    <ul class="navbar-nav">
-				<li class="nav-item">
-				<a class="nav-link" href="#"><button onclick = "week()">Week</button></a>
-			</li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#"><button onclick = "promedio()">Exercise</button></a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#"><button onclick = "ver()">Healthy Lifestyle</button></a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#"><button onclick = "tips()">Tips</button></a>
-	      </li>
-				<li class="nav-item">
-	        <a class="nav-link" href="#"><button onclick = "med()">Meditation</button></a>
-	      </li>
-				<li class="nav-item">
-	        <a class="nav-link" href="#"><button onclick = "localizame()">Localizame</button></a>
-	      </li>
-	    </ul>
-	  </div>
+		    <li><a href="#">Healthy Lifestyle</a></li>
+		    <li><a href="#">Tips</a></li>
+		    <li><a href="#">Meditation</a></li>
+		    <li><a href="#">Localizame</a></li>
+		  </ul>
+		</nav>
 	</nav>
 
 	</header>
@@ -77,7 +57,6 @@
 
 </article>
 
-<button onclick= "transition()">Change outlines</button>
 <br>
 <h4>Subscribe Here</h4>
 <button id="hide">hide</button><button id="show">show</button>
@@ -108,8 +87,9 @@
 <article>
 	<div>
 	</div>
-	<h1>Recipe</h1>
-	<h2>Herb-Crusted Salmon and Grilled Asparagus Recipe</h2>
+	<h1>Food Ideas</h1>
+	<h2>Recipe</h2>
+	<h3>Herb-Crusted Salmon and Grilled Asparagus Recipe</h3>
 <div class="salmon" id="col">
 
 	<img class="img-fluid sa" id="imagen" src="pic/salmon.jpg" alt="salmon">
