--- a/pagina/index.html
+++ b/pagina/index.html
@@ -15,9 +15,16 @@
 <script defer src="java/dom.js"> </script>
 <script defer src="java/Storage.js"> </script>
 <script defer src="java/eventos.js"> </script>
+<script defer src="java/carrousel.js"> </script>
 <!---<script defer src="java/json.js"> </script>/-->
 <script defer src="java/geolocations.js"> </script>
 <script defer src="java/jquery.js"> </script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scrollbar/8.3.1/smooth-scrollbar.js"></script><script defer src=https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+
+
+
 	<meta charset="UTF-8">
 		<title>kk</title>
 
@@ -56,6 +63,109 @@
 		<p>Let's work on getting our confidence back after a break up together. You will see results in a month if you follow my strict work out and diet</p>
 
 </article>
+
+<svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <defs>
+    <symbol id="icon-cross" viewBox="0 0 32 32">
+      <title>close</title>
+      <path d="M31.7 25.7L22 16l9.7-9.7a1 1 0 0 0 0-1.4L27.1.3a1 1 0 0 0-1.4 0L16 10 6.3.3a1 1 0 0 0-1.4 0L.3 4.9a1 1 0 0 0 0 1.4L10 16 .3 25.7a1 1 0 0 0 0 1.4l4.6 4.6a1 1 0 0 0 1.4 0L16 22l9.7 9.7a1 1 0 0 0 1.4 0l4.6-4.6a1 1 0 0 0 0-1.4z"/>
+    </symbol>
+  </defs>
+</svg>
+
+<div class="page" data-modal-state="closed">
+  <div class="container">
+    <div class="card-slider">
+      <div class="card-wrapper"><article class="card">
+        <picture class="card__background">
+          <img src="pic/yoga.jpg">
+        </picture>
+        <div class="card__category">
+          consulta
+        </div>
+        <h3 class="card__title">Yoga</h3>
+        <div class="card__duration">
+          Duration: 3 months
+        </div>
+        </article></div>
+      <div class="card-wrapper"><article class="card">
+        <picture class="card__background">
+          <img src="pic/exercise.jpg">
+        </picture>
+        <div class="card__category">
+          consulta
+        </div>
+        <h3 class="card__title">Exercise</h3>
+        <div class="card__duration">
+           Duration: 3 months
+        </div>
+        </article></div>
+      <div class="card-wrapper"><article class="card">
+        <picture class="card__background">
+          <img src="pic/yoga ex.jpg">
+        </picture>
+        <div class="card__category">
+          consulta
+        </div>
+        <h3 class="card__title">Yoga & Exercise</h3>
+        <div class="card__duration">
+          Duration: 3 months
+        </div>
+        </article></div>
+      <div class="card-wrapper"><article class="card">
+        <picture class="card__background">
+          <img src="pic/medita.jpg">
+        </picture>
+        <div class="card__category">
+          consulta
+        </div>
+        <h3 class="card__title">Meditation</h3>
+        <div class="card__duration">
+          Duration: 3 months
+        </div>
+        </article></div>
+      <div class="card-wrapper"><article class="card">
+        <picture class="card__background">
+          <img src="pic/meditation.jpg">
+        </picture>
+        <div class="card__category">
+          consulta
+        </div>
+        <h3 class="card__title">Yoga & Meditation</h3>
+        <div class="card__duration">
+          Duration: 3 months
+        </div>
+        </article></div>
+    </div>
+  </div>
+  <div class="overlay"></div>
+  <div class="modal-wrapper">
+    <div class="modal">
+      <button class="modal__close-button" type="button">
+        <svg class="icon icon-cross"><use xlink:href="#icon-cross"></use></svg>
+      </button>
+      <div class="modal__scroll-area">
+        <header class="modal__header">
+          <div class="card__background">
+            <img src="pic/food ex.jpg">
+          </div>
+          <div class="card__category">
+            consulta
+          </div>
+          <h1 class="card__title">Food & Exercise plan</h1>
+          <div class="card__duration">
+            Duration: 3 months
+          </div>
+        </header>
+        <main class="modal__content">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quo sint debitis? Dolorem est at voluptatum obcaecati tempore eaque perferendis. Totam at consectetur commodi porro atque eligendi rerum vero nam?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quo sint debitis? Dolorem est at voluptatum obcaecati tempore eaque perferendis. Totam at consectetur commodi porro atque eligendi rerum vero nam?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quo sint debitis? Dolorem est at voluptatum obcaecati tempore eaque perferendis. Totam at consectetur commodi porro atque eligendi rerum vero nam?</p>
+        </main>
+      </div>
+    </div>
+  </div>
+</div>
 
 <br>
 <h4>Subscribe Here</h4>
