fixed some issues

--- a/pagina/index.html
+++ b/pagina/index.html
@@ -12,11 +12,11 @@
 <script defer src="java/objetodos.js"> </script>
 <script defer src="java/array.js"> </script>
 <script defer src="java/array2.js"> </script>
-<script defer src="java/dom.js"> </script>
 <script defer src="java/Storage.js"> </script>
 <script defer src="java/eventos.js"> </script>
 <script defer src="java/carrousel.js"> </script>
 <script defer src="java/data.json"> </script>
+<script defer src="java/cscript.js"> </script>
 <!---<script defer src="java/json.js"> </script>/-->
 <script defer src="java/geolocations.js"> </script>
 <script defer src="java/jquery.js"> </script>
