--- a/pagina/confirm.html
+++ b/pagina/confirm.html
@@ -21,6 +21,8 @@
          <p id="clave"></p>
          <label for="password">Password</label>
          <p id="clave"></p>
+         <label for="plan">Plan</label>
+         <p id="clave"></p>
          <button class="right btn-large btn-floating green darken-2 waves-effect waves-light" onclick="confirmed()"><i class="material-icons">check</i></button>
          <button class="right btn-large btn-floating red waves-effect waves-light" onclick="navegar('index.html')"><i class="material-icons"><</i></button>
      </body>
