--- a/pagina/index.html
+++ b/pagina/index.html
@@ -17,6 +17,7 @@
 <script defer src="java/carrousel.js"> </script>
 <script defer src="java/data.json"> </script>
 <script defer src="java/cscript.js"> </script>
+<script defer src="java/ajax.js"> </script>
 <!---<script defer src="java/json.js"> </script>/-->
 <script defer src="java/geolocations.js"> </script>
 <script defer src="java/jquery.js"> </script>
@@ -106,7 +107,18 @@
         <input type="password" id="clave" placeholder="you will get your passcode as sms" onblur="save(this)">
 			</li>
 			<li>
-      <button class="right btn-large btn-floating blue waves-effect waves-light" onclick= "navegar('confirm.html')"><i class="material-icons">></i></button>
+				<label for="plan" >Plan</label>
+  		<select id="plan" name="country"  onblur="save(this)">
+  		<option value="yo" onblur="save(this)">yoga</option>
+  		<option value="me" onblur="save(this)">meditation</option>
+  			<option value="ex" onblur="save(this)">Exercise</option>
+				<option value="yomed" onblur="save(this)">Yoga and Meditation</option>
+				<option value="yoex" onblur="save(this)">Yoga and Exercise</option>
+  </select>
+</form>
+</li>
+<li>
+	      <button class="right btn-large btn-floating blue waves-effect waves-light" onclick= "navegar('confirm.html')"><i class="material-icons">></i></button>
 		</li>
 </div>
 <article>
