--- a/pagina/confirm.html
+++ b/pagina/confirm.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 
 <script src="java/Storage.js"> </script>
-
+<script src="java/plan.js"> </script>
 
      </head>
      <body onload="retrive()">
