--- a/pagina/index.html
+++ b/pagina/index.html
@@ -75,7 +75,7 @@
 
 	<script id="speakerstpl" type="text/template">
 		{{#programs}}
-			<div class="speaker">
+			<div class="program">
 				<img src="pix/{{shortname}}.jpg" alt="Photo of {{Info}}" />
 				<h3>{{program}}</h3>
 				<p>{{Info}}</p>
