--- a/pagina/index.html
+++ b/pagina/index.html
@@ -22,9 +22,10 @@
 <script defer src="java/geolocations.js"> </script>
 <script defer src="java/jquery.js"> </script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
-<script defer src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scrollbar/8.3.1/smooth-scrollbar.js"></script><script defer src=https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scrollbar/8.3.1/smooth-scrollbar.js"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-
+<script defer scr="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
 
 	<meta charset="UTF-8">
