--- a/pagina/confirm.html
+++ b/pagina/confirm.html
@@ -11,18 +11,18 @@
 <script src="java/plan.js"> </script>
 
      </head>
-     <body onload="retrive()">
+     <body onload="confirmoDatos()">
          <h4>Please confirm your info:</h4>
          <label for="nombre">Name</label>
-         <p id="clave"></p>
+         <p id="name"></p>
          <label for="telephone">Phone</label>
-         <p  id="clave"></p>
+         <p  id="tel"></p>
          <label for="email">Email</label>
-         <p id="clave"></p>
+         <p id="email"></p>
          <label for="password">Password</label>
-         <p id="clave"></p>
+         <p id="password"></p>
          <label for="plan">Plan</label>
-         <p id="clave"></p>
+         <p id="pla"></p>
          <button class="right btn-large btn-floating green darken-2 waves-effect waves-light" onclick="confirmed()"><i class="material-icons">check</i></button>
          <button class="right btn-large btn-floating red waves-effect waves-light" onclick="navegar('index.html')"><i class="material-icons"><</i></button>
      </body>
