--- a/pagina/confirm.html
+++ b/pagina/confirm.html
@@ -11,7 +11,7 @@
 <script src="java/plan.js"> </script>
 
      </head>
-     <body onload="confirmoDatos()">
+     <body onload="retrive()">
          <h4>Please confirm your info:</h4>
          <label for="nombre">Name</label>
          <p id="name"></p>
