--- a/pagina/index.html
+++ b/pagina/index.html
@@ -31,7 +31,7 @@
 
 
 	<meta charset="UTF-8">
-		<title>kk</title>
+		<title>Yoga</title>
 
 	</head>
   <body class="fondo">
@@ -92,40 +92,32 @@
 <button id="hide">hide</button><button id="show">show</button>
 <div id="see">
 
-  <p>Please fill in the following filds;</p>
-	<ul>
-		<li>
-      <label for="nombre">Name</label>
-        <input type="text" id="name" placeholder="Add name" onblur="guardoCampo(this)">
-					</li>
-				<li>
-      <label for="Telephone">Telephone</label>
-        <input type="tel" id="tel" placeholder="Add phone" onblur="guardoCampo(this)">
-			</li>
-		<li>
-      <label for="email">Email</label>
-        <input type="email" id="email" placeholder="Add email" onblur="guardoCampo(this)">
-			</li>
-			<li>
-      <label for="password">Password</label>
-        <input type="password" id="password" placeholder="you will get your passcode as sms" onblur="guardoCampo(this)">
-			</li>
-			<li>
-				<label for="plan">Plan</label>
-  		<select id="pla" name="plan" onblur="guardoCampo(this)">
-  			<option value="yo" onblur="guardoCampo(this)">yoga</option>
-  			<option value="me" onblur="guardoCampo(this)">meditation</option>
-  			<option value="ex" onblur="guardoCampo(this)">Exercise</option>
-				<option value="yomed" onblur="guardoCampo(this)">Yoga and Meditation</option>
-				<option value="yoex" onblur="guardoCampo(this)">Yoga and Exercise</option>
-  </select>
 
+<form>
+	<p>Please fill in the following filds;</p>
+<br>
+		<label for="nombre">Name</label>
+			<input type="text" id="clave" placeholder="Add name" onblur="save(this)">
+
+		<label for="Telephone">Telephone</label>
+			<input type="tel" id="clave" placeholder="Add phone" onblur="save(this)">
+
+		<label for="email">Email</label>
+			<input type="email" id="clave" placeholder="Add email" onblur="save(this)">
+
+		<label for="password">Password</label>
+			<input type="password" id="clave" placeholder="you will get your passcode as sms" onblur="save(this)">           
+						<select id="pla" name="plan" onblur="save(this)">
+							<option value="yo" onblur="save(this)">yoga</option>
+							<option value="me" onblur="save(this)">meditation</option>
+							<option value="ex" onblur="save(this)">Exercise</option>
+							<option value="yomed" onblur="save(this)">Yoga and Meditation</option>
+	 					<option value="yoex" onblur="save(this)">Yoga and Exercise</option>
+				</select>
+				<button class="right btn-large btn-floating blue waves-effect waves-light" onclick= "navegar('confirm.html')"><i class="material-icons">></i></button>
+
+				</div>      
 </form>
-</li>
-<li>
-	      <button class="right btn-large btn-floating blue waves-effect waves-light" onclick= "navegar('confirm.html')"><i class="material-icons">></i></button>
-		</li>
-</div>
 <article>
 	<div>
 	</div>
