--- a/pagina/index.html
+++ b/pagina/index.html
@@ -97,24 +97,24 @@
 	<p>Please fill in the following filds;</p>
 <br>
 		<label for="nombre">Name</label>
-			<input type="text" id="clave" placeholder="Add name">
+			<input type="text" id="clave" placeholder="Add name" onblur="save(this)">
 
 		<label for="Telephone">Telephone</label>
-			<input type="tel" id="clave" placeholder="Add phone" >
+			<input type="tel" id="clave" placeholder="Add phone" onblur="save(this)">
 
 		<label for="email">Email</label>
-			<input type="email" id="clave" placeholder="Add email">
+			<input type="email" id="clave" placeholder="Add email" onblur="save(this)">
 
 		<label for="password">Password</label>
-			<input type="password" id="clave" placeholder="you will get your passcode as sms">           
-						<select id="pla" name="plan">
-							<option value="yo">yoga</option>
-							<option value="me">meditation</option>
-							<option value="ex">Exercise</option>
-							<option value="yomed">Yoga and Meditation</option>
-	 					<option value="yoex">Yoga and Exercise</option>
+			<input type="password" id="clave" placeholder="you will get your passcode as sms" onblur="save(this)">           
+						<select id="pla" name="plan" onblur="save(this)">
+							<option value="yo" onblur="save(this)">yoga</option>
+							<option value="me" onblur="save(this)">meditation</option>
+							<option value="ex" onblur="save(this)">Exercise</option>
+							<option value="yomed" onblur="save(this)">Yoga and Meditation</option>
+	 					<option value="yoex" onblur="save(this)">Yoga and Exercise</option>
 				</select>
-				<button class="right btn-large btn-floating blue waves-effect waves-light" id="save" link href="css/styles.css"><i class="material-icons">></i></button>
+				<button class="right btn-large btn-floating blue waves-effect waves-light" id="save" onclick= "navegar('confirm.html')"><i class="material-icons">></i></button>
 
 				</div>      
 </form>
