--- a/pagina/confirm.html
+++ b/pagina/confirm.html
@@ -14,15 +14,15 @@
      <body onload="retrive()">
          <h4>Please confirm your info:</h4>
          <label for="nombre">Name</label>
-         <p id="name"></p>
+         <p id="nom"></p>
          <label for="telephone">Phone</label>
          <p  id="tel"></p>
          <label for="email">Email</label>
          <p id="email"></p>
          <label for="password">Password</label>
-         <p id="password"></p>
+         <p id="pw"></p>
          <label for="plan">Plan</label>
-         <p id="pla"></p>
+         <p id="pl"></p>
          <button class="right btn-large btn-floating green darken-2 waves-effect waves-light" onclick="confirmed()"><i class="material-icons">check</i></button>
          <button class="right btn-large btn-floating red waves-effect waves-light" onclick="navegar('index.html')"><i class="material-icons"><</i></button>
      </body>
