--- a/pagina/index.html
+++ b/pagina/index.html
@@ -55,6 +55,41 @@
 
 	<article class="txt1" id="col">
 		<h2>GET YOUR RAVANGE BODY IN A MONTH</h2>
+		<p>Check out our plans to get more information on how this works.</p>
+		
+		<br>
+		<div id="carouselExampleIndicators" class="carousel slide car" data-ride="carousel">
+
+			<div class="carousel-inner">
+			  <div class="carousel-item active">
+				<img src="pic/yoga.jpg" class="d-block w-70" alt=".">
+			  </div>
+			  <div class="carousel-item">
+				<img src="pic/medita.jpg" class="d-block w-70" alt=".">
+			  </div>
+			  <div class="carousel-item">
+				<img src="pic/exercise.jpg" class="d-block w-70 diome" alt=".">
+			  </div>
+			  <div class="carousel-item">
+				<img src="pic/meditation.jpg" class="d-block w-70 diome" alt=".">
+			  </div>
+			  <div class="carousel-item">
+				<img src="pic/yoga ex.jpg" class="d-block w-70 diome" alt=".">
+			  </div>
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>Yoga</h5>
+				<p>info</p>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Next</span>
+			</a>
+		  </div>
+
 		<p>Subscribe for work out tips, food suggestions and more!</p>
 		<p>Let's work on getting our confidence back after a break up together. You will see results in a month if you follow my strict work out and diet</p>
 
